# crud_test

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
backend/careers/: models.py  serializers.py  urls.py  views.py
backend/careers/migrations/: 0001_initial.py  0002_rename_career_post.py
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_admin_page.py  test_auth_models_user.py  test_careers_views.py  test_carrers_models.py  test_dummy.py
